--- a/FirstApp.vcxproj
+++ b/FirstApp.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Class.cpp" />
     <ClCompile Include="FirstApp.cpp" />
   </ItemGroup>
   <ItemGroup>
