--- a/FirstApp.vcxproj.filters
+++ b/FirstApp.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="FirstApp.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Class.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Helpers.h">
